--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   },
-  "homepage": "https://daivikpurani.github.io/Portfolio",
+  "homepage": "https://daivikpurani.github.io/portfolio",
   "config": {
     "githubUsername": "daivikpurani"
   }
